# yumezone

./: .coderabbit.yaml  .env.example  .gitignore  LICENSE  RATE_LIMITING.md  README.md  pyproject.toml  requirements.txt  run.py
api/: __init__.py  app.py
api/core/: __init__.py  caching.py  config.py  db_connector.py  extensions.py
api/models/: __init__.py  admin.py  comments.py  user.py  watch_together.py  watchlist.py
api/providers/: __init__.py  anilist_home.py  mal_fallback.py  unified.py  video_utils.py
api/providers/allanime/: __init__.py  allanime.py
api/providers/animex/: __init__.py  animex.py
api/providers/kuudere/: __init__.py  kuudere.py
api/providers/manga/: __init__.py  atsumaru.py  base.py  comix.py  unified.py
api/providers/miruro/: __init__.py  anime_info.py  base.py  catalog.py  episodes.py  home.py  miruro.py  search.py  sources.py
api/routes/: __init__.py
api/routes/anime/: __init__.py  anilist_api.py  anime_routes.py  catalog_routes.py  themes_api.py  watch_routes.py  watch_together_routes.py
api/routes/manga/: __init__.py  manga_api.py  manga_routes.py
api/routes/shared/: __init__.py  admin_routes.py  api.py  auth.py  auth_api.py  comments_api.py  home_routes.py  search_routes.py  watchlist.py  watchlist_api.py
api/static/css/: admin.css  comments.css  info.css  manga.css  popup.css  style.css  watch.css  watch_together.css  watchlist.css
api/static/js/: admin.js  comments.js  (+14 more)
api/utils/: __init__.py  ani_to_yume.py  cipher.py  client_detection.py  helpers.py  mailer.py  mal_service.py  moderation.py  watch_order.py
(+22 files in other folders)
