[project]
name = "yumezone"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "cryptography>=49.0.0",
    "curl-cffi>=0.15.0",
    "fastapi>=0.137.1",
    "flask-limiter>=4.1.1",
    "flask[async]>=3.1.3",
    "httpx>=0.28.1",
    "mangum>=0.21.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-snappy>=0.7.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
